--- a/client/index.html
+++ b/client/index.html
@@ -18,28 +18,27 @@
         <div class="row">
           <div class="col-xs-12 text-center">
             <!-- need to scale this down -->
-            <img alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" />
+            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" />
           </div>
         </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <p>Enter an e-mail address below to search images</p>
+        <div class="row col-xs-12">
+          <div class="col-xs-2">
           </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12 col-sm-8">
-            <div class="form-group">
+          <div class="col-xs-8">
+            <div class="input-group">
               <input type="text" name="query" id="query_box" class="form form-control" />
+              <span class="input-group-btn">
+                <button class="btn btn-primary pull-right" type="button">Search</button>
+              </span>
             </div>
           </div>
-          <div class="col-sm-2 col-xs-12 error-row">
-            <span></span>
-          </div>
-          <div class="col-sm-2 col-xs-12">
-            <button class="btn btn-primary pull-right">Search</button>
+          <div class="col-xs-2">
           </div>
         </div>
-        <div id="search_results">
+        <div class="row col-xs-12 error-row text-center">
+          <span></span>
+        </div>
+        <div id="search_results" class="text-center">
         </div>
       </fieldset>
     </form>
