Making a few UI changes to the html

--- a/client/index.html
+++ b/client/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="A sample search engine to fetch images based on a user's email address.">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="css/styles.min.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon" />
+  <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon">
 </head>
 
 <body>
@@ -17,8 +17,7 @@
       <fieldset>
         <div class="row">
           <div class="col-xs-12 text-center">
-            <!-- need to scale this down -->
-            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" />
+            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" style="margin-left:-45px;"/>
           </div>
         </div>
         <div class="row col-xs-12">
