Updating UI to add a header and cleaner animation

--- a/client/index.html
+++ b/client/index.html
@@ -12,12 +12,16 @@
 </head>
 
 <body>
+  <header>
+    <img src="img/logotype-white.png" />
+    <div class="results-text">Results for "<span></span>"</div>
+  </header>
   <div class="container" id="search_container">
-    <form class="inner_container" id="queryForm">
+    <form class="inner_container" id="query_form">
       <fieldset>
         <div class="row">
           <div class="col-xs-12 text-center">
-            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" style="margin-left:-45px;"/>
+            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" />
           </div>
         </div>
         <div class="row col-xs-12">
@@ -42,6 +46,8 @@
       </fieldset>
     </form>
   </div>
+  <footer>
+  </footer>
   
   <script src="js/main.min.js"></script>
 
