Finishing touches on UI, including error messaging, etc.

--- a/client/index.html
+++ b/client/index.html
@@ -21,10 +21,10 @@
       <fieldset>
         <div class="row">
           <div class="col-xs-12 text-center">
-            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" width="200" />
+            <img id="logo" alt="Yik Yak Image Search" src="img/YikYak.jpg" />
           </div>
         </div>
-        <div class="row col-xs-12">
+        <div class="row col-xs-12 text-center">
           <div class="col-xs-2">
           </div>
           <div class="col-xs-8">
